--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 input:focus{
     outline: none;
 }
@@ -5,4 +6,9 @@ div.right_side_bar{
     position: fixed;
     right: 30px;
     top: 10px;
+}
+.left_sidebar{
+    position: sticky;
+    top: 0px;
+    height: fit-content;
 }
